--- a/example/src/index.css
+++ b/example/src/index.css
@@ -12,3 +12,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  margin: 0 auto;
+}
+
+.example {
+  text-align: center;
+}
+
+.example, .data-map-example {
+  width: 1000px;
+  height: 200px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background: red;
+
+}
